@@ -1,11 +1,11 @@
-./BUILD = 720423d9c6956b272e5977dca2a6f2d5
-./CHANGELOG = 16c92889d7333db1a6472fd14c560342
+./BUILD = 39b562805836417af901af7de4b395a5
+./CHANGELOG = 21ef8f6fcd92f149a7dff5a0f39abb58
 ./CONTENT = e5fb179512b7edc99d23ed0d67cf08a1
 ./LICENSE = 43df073a04022f63913c379646905da6
 ./Makefile = 2094d2d544157afa0c3de2a4de5f8aad
 ./README.md = 0e7b43624c0d0cf87a4fecbba33af42f
 ./TARGETS = bbf3849fd4dc7cdbddf585daa3ddba3d
-./VERSION = 2291547cab5a94b3e5356f6cfacd3854
+./VERSION = 6b260be35f0d5493d631af2f03f83582
 ./alloc.c = f273f8d97eb5567eadddb0554162dbff
 ./base64.c = 3a2830988bc99a672f09557b288dfd81
 ./buffer.c = 907ba59e08b6e365169080249ec954f7
@@ -15,26 +15,26 @@
 ./cdbread.c = 5eeb568fb122813c7ac0a3d273b98591
 ./conf-build = a6b6fd07cb52744a56dd21cfa98a8ab5
 ./configure = 03b12b55621e041bc57768e13687401f
-./dnsstub = 93357717a96955207cf793c6dc7cf3f0
+./dnsstub = b54d275a14a7ea2d898834f44948eba6
 ./dnsstub/Makefile = 68b1b5f7346c11e4db42e699277b0960
 ./dnsstub/README = 6c1bacb8c0bc728edee59a780b7a2cfe
 ./dnsstub/TARGETS = 723bd9a97f59f9091fbe2fba10ef8e5e
 ./dnsstub/dns_cname.c = b989443bce37c8ad3e6baba0e535a0a8
 ./dnsstub/dns_dfd.c = cd716bb7d02a038d05181ec5879ef8aa
 ./dnsstub/dns_domain.c = e79ee91862f5d06ec892a228489aca3f
-./dnsstub/dns_dtda.c = 9a001bf8c760296b8f7a240e37f5398f
-./dnsstub/dns_ip.c = 8f2bd1634aa7c3008ea8305d3d830d58
-./dnsstub/dns_ipq.c = fa18577e1c950ecd669827727433df2f
-./dnsstub/dns_mx.c = f976600bea27ad0a30e2b34ce5c2e973
-./dnsstub/dns_name.c = 27016e90dcf0357cf720ba41225ec417
+./dnsstub/dns_dtda.c = aa392b35d7ad4d0fb247a9c14c7e3aca
+./dnsstub/dns_ip.c = 81de221a27eaf734578f1aac771e3d6c
+./dnsstub/dns_ipq.c = 8d312e9e0673b0aa88f3a8e1a17eab00
+./dnsstub/dns_mx.c = 72b8405db5f87d065265a896c73cc4cc
+./dnsstub/dns_name.c = 52887c5b5909680989da7208ef9e30b9
 ./dnsstub/dns_nd.c = 0ae702e0f8ec85b136da043ed55b47d7
 ./dnsstub/dns_packet.c = f7f1c3f8486d6b4177364041f990c2c6
 ./dnsstub/dns_random.c = 7429f11a2181d0771046ffd85f4acb38
-./dnsstub/dns_rcip.c = 64ff17782844366b59aec189b8750cf9
-./dnsstub/dns_rcrw.c = eef58504f78670446915f20ef7e93c86
+./dnsstub/dns_rcip.c = bb06d397b5cca734b7441eae8362861f
+./dnsstub/dns_rcrw.c = 736a369250a2bf02fdd63f6f0dd8a80a
 ./dnsstub/dns_resolve.c = b87073a95605a6f6001e9f61879cad47
 ./dnsstub/dns_sortip.c = e04c584dbe68a4c5731e7bcea8fa896f
-./dnsstub/dns_transmit.c = bb62573a324e6acbbe1a4da3d32769ee
+./dnsstub/dns_transmit.c = 24ff54917a13a8a8921d09f0e833f2ec
 ./dnsstub/dns_txt.c = 0c947f8998537adffd460055e3fab8c5
 ./env.c = 1191427c9ceb18a599ff9b065b5e0af9
 ./errstr.c = e89bde5dd0320f24a399967ef64c4a27
@@ -42,7 +42,7 @@
 ./fmt.c = b2627c34a39b7a492ec07969931c6bc9
 ./getln.c = bb694220f8bedb7f7f8a8dd8a6d91347
 ./getoptb.c = 92c4305401f59359b8dac69e1df84647
-./include = f43223262ee0af694ab2dff37d423655
+./include = e576acb96b46185daa1a1dd9ea975df4
 ./include/alloc.h = fc20a6d23d60eeaa84a913b19cea2a6f
 ./include/base64.h = 518e08181673aff5e497eb526a427b1d
 ./include/buffer.h = 4ff0a37e7b614e0d80123782f706f54a
@@ -52,7 +52,7 @@
 ./include/cdbread.h = d2e5c39b59601a81225c94b447c04058
 ./include/close.h = a1a84cfde83c8cef39c5ca5f52796aee
 ./include/direntry.h = ed9e2af8fed1975b017883488b0db2f7
-./include/dnsresolv.h = 4b60ee852037a686c9c94a8ea43718e2
+./include/dnsresolv.h = 22bf90df94a11271f620d24849421d27
 ./include/env.h = a7da4973f1cbe775c2535c02c2427cda
 ./include/error.h = 7886039fc72d57919c1c6db56b5fc324
 ./include/exit.h = 45e2e3e56314e2332837a61e1c866423
@@ -86,12 +86,12 @@
 ./include/uint_t.h = 21c99ec2735043e89a8e50d33e7e2f17
 ./include/wait.h = fc9c628f22a862bb9af69fdd7a6b61a8
 ./install = f6468f1ce0a61e581df2d3278d4f9d24
-./iopause.c = 6153add7eadd06aaba2db507668061fa
+./iopause.c = 7cbd896fbcca2c26b218a3299543c905
 ./ip4.c = f265d23558f331cb808eabef4ba7be33
 ./ip6.c = 8b00b6650c49aa993253305576db03b0
 ./lock.c = 50aa9fca4611c86f943c49256b7a001a
 ./logmsg.c = 369b9f1d4171cd4e63d2c2f246697fde
-./man = fa558b3e0a61fd84e3fb39bcc0b0e3c8
+./man = a2153643f3fd6ff9ec0c689ab587673d
 ./man/alloc.3 = 56b67538656c462ed8bf14434ffabbe4
 ./man/buffer.3 = 3abe76f70b7a683a32130fbcf7c45509
 ./man/byte.3 = 1f7b64b865af727150f9b951154b6fee
@@ -136,7 +136,7 @@
 ./seek.c = 5c2ee16ea4ec99584d702ff55d9c9d19
 ./sharedlib = bde12e503174244d57ad35135b5d25e9
 ./sig.c = a8a98f1c8c27eece5f341ec05f46e80e
-./socket_bind.c = c92b7e50064cc20cd9a7a365697a21b7
+./socket_bind.c = 6b0a9c79f4d73318c8efb027b4403b62
 ./socket_connect.c = 5d46aba7a0bd5f08bee43bc23dc6b1ff
 ./socket_if.c = c841f0681878e90fbac87dc4ce7ab6fe
 ./socket_info.c = 5d33dbae7f084358db888477931e2a13
@@ -145,7 +145,7 @@
 ./socket_setup.c = 17d0f0d15aab6663ce6fedc4abaf12ff
 ./socket_tcp.c = 9f0d7fe78c53bf0e6c5a0868ca65e2bc
 ./socket_udp.c = 0426c42a1a3af8a7c4c1c8296e9442bf
-./str.c = 3d669e957036d5349b1c4ef312de6337
+./str.c = d3e8b1babe9326d1b0cdd15a6e73cce3
 ./stralloc.c = ded7670cc60dd871ce6f210d9de9847c
 ./tai.c = 823b0274b23207ebade293fd14a1ab31
 ./taia.c = 63de9eb6672c1c43296b383224fccc74
