@@ -22,14 +22,13 @@ int dns_domain_todot_cat(stralloc *out,const char *d)
     ch = *d++;
     while (ch--) {
       ch2 = *d++;
-      if ((ch2 >= 'A') && (ch2 <= 'Z'))
-        ch2 += 32;
+      if ((ch2 >= 'A') && (ch2 <= 'Z')) ch2 += 32;   // FQDN -> lowercase
       if (((ch2 >= 'a') && (ch2 <= 'z')) || 
           ((ch2 >= '0') && (ch2 <= '9')) || 
            (ch2 == '-') || (ch2 == '_')) {
         if (!stralloc_append(out,&ch2)) return 0;
       }
-      else {
+      else {                                         // IPv4 -> octal
         ch3 = ch2;
         buf[3] = '0' + (ch3 & 7); ch3 >>= 3;
         buf[2] = '0' + (ch3 & 7); ch3 >>= 3;
