@@ -37,7 +37,7 @@ int dns_ip4_packet(stralloc *out,const char *buf,unsigned int len)
         if (datalen == 4) {
           if (!dns_packet_copy(buf,len,pos,header,4)) return DNS_ERR;
           if (!stralloc_catb(out,header,4)) return DNS_MEM;
-      }
+        }
     pos += datalen;
     ++ranswers;
   }
@@ -80,7 +80,7 @@ int dns_ip4(stralloc *out,stralloc *fqdn)
     dns_transmit_free(&dns_resolve_tx);
     dns_domain_free(&q);
 
-    return rc; 
+    return rc;
   }
 
   out->len &= ~3;
@@ -95,7 +95,7 @@ int dns_ip6_packet(stralloc *out,const char *buf,unsigned int len)
   uint16 datalen;
   int ranswers = 0;
 
-  if (!stralloc_cats(out,"")) return DNS_MEM;
+  if (!stralloc_copys(out,"")) return DNS_MEM;
 
   pos = dns_packet_copy(buf,len,0,header,12); if (!pos) return DNS_ERR;
   uint16_unpack_big(header + 6,&numanswers);
@@ -138,7 +138,7 @@ int dns_ip6(stralloc *out,stralloc *fqdn)
   if (!stralloc_copys(out,"")) return DNS_MEM;
   if (!stralloc_readyplus(fqdn,1)) return DNS_MEM;
 
-  fqdn->s[fqdn->len] = 0;		/* if FQDN is just IPv6 */
+  fqdn->s[fqdn->len] = 0;  /* if FQDN is just IPv6 */
   if ((i = ip6_scan(fqdn->s,ip))) {
     if (fqdn->s[i]) return DNS_INT;
     if (!stralloc_copyb(out,ip,16)) return DNS_MEM;
@@ -164,7 +164,7 @@ int dns_ip6(stralloc *out,stralloc *fqdn)
       continue;
     }
 
-    if (!dns_domain_fromdot(&q,fqdn->s,fqdn->len)) return DNS_ERR;	// fqdn -> AAAA query -> response
+    if (!dns_domain_fromdot(&q,fqdn->s,fqdn->len)) return DNS_ERR; // fqdn -> AAAA query -> response
     if (dns_resolve(q,DNS_T_AAAA) < 0 ) return DNS_ERR;
     if ((rc += dns_ip6_packet(out,dns_resolve_tx.packet,dns_resolve_tx.packetlen)) < 0) return DNS_ERR;
     dns_transmit_free(&dns_resolve_tx);
