@@ -34,23 +34,23 @@ int dns_mx_packet(stralloc *out,const char *buf,unsigned int len)
     pos = dns_packet_copy(buf,len,pos,header,10); if (!pos) return DNS_ERR;
     uint16_unpack_big(header + 8,&datalen);
     if (byte_equal(header,2,DNS_T_MX))
-    if (byte_equal(header + 2,2,DNS_C_IN)) {
-      if (!dns_packet_copy(buf,len,pos,pref,2)) return DNS_ERR;
-      if (!dns_packet_getname(buf,len,pos + 2,&q)) return DNS_ERR;
-      if (!stralloc_catb(out,pref,2)) return DNS_MEM;
-      if (!dns_domain_todot_cat(out,q)) return DNS_ERR;
-      if (!stralloc_0(out)) return DNS_MEM;
-    }
+      if (byte_equal(header + 2,2,DNS_C_IN)) {
+        if (!dns_packet_copy(buf,len,pos,pref,2)) return DNS_ERR;
+        if (!dns_packet_getname(buf,len,pos + 2,&q)) return DNS_ERR;
+        if (!stralloc_catb(out,pref,2)) return DNS_MEM;
+        if (!dns_domain_todot_cat(out,q)) return DNS_ERR;
+        if (!stralloc_0(out)) return DNS_MEM;
+      }
     pos += datalen;
     ++ranswers;
   }
 
-  return ranswers; 
+  return ranswers;
 }
 
 int dns_mx(stralloc *out,const stralloc *fqdn)
 {
-  int rc = 0;
+  int rc;
 
   if (!dns_domain_fromdot(&q,fqdn->s,fqdn->len)) return DNS_ERR;
   if (dns_resolve(q,DNS_T_MX) < 0) return DNS_ERR;
