@@ -141,7 +141,7 @@ int thisudp(struct dns_transmit *d)
   
         d->s1 = 1 + socket_udp();
         if (!d->s1) { dns_transmit_free(d); return DNS_COM; }
-        if (randombind(d) == -1) { dns_transmit_free(d); return DNS_COM; }
+        if (randombind(d) < 0) { dns_transmit_free(d); return DNS_COM; }
 
         if (byte_equal(ip,2,V6linklocal) && !d->scope_id) 
           d->scope_id = getscopeid(d,ip);
@@ -193,7 +193,7 @@ int thistcp(struct dns_transmit *d)
 
       d->s1 = 1 + socket_tcp();
       if (!d->s1) { dns_transmit_free(d); return DNS_COM; }
-      if (randombind(d) == -1) { dns_transmit_free(d); return DNS_COM; }
+      if (randombind(d) < 0) { dns_transmit_free(d); return DNS_COM; }
   
       taia_now(&now);
       taia_uint(&d->deadline,10);
