@@ -24,7 +24,7 @@ int socket_bind4(int s,const char ip[4],uint16 port)
   uint16_pack_big((char *)&sa.sin_port,port);
   byte_copy((char *)&sa.sin_addr,4,ip);
 
-  return bind(s,(struct sockaddr *)&sa,sizeof sa);
+  return bind(s,(struct sockaddr *)&sa,sizeof(sa));
 }
 
 int socket_bind4_reuse(int s,const char ip[4],uint16 port)
@@ -67,7 +67,7 @@ int socket_bind6_reuse(int s,const char ip[16],uint16 port,uint32 scope_id)
 int socket_bind(int s,const char ip[16],uint16 port,uint32 scope_id)
 {
   if (ipv4socket)
-    return socket_bind4(s,ip+12,port);
+    return socket_bind4(s,ip + 12,port);
   
   return socket_bind6(s,ip,port,scope_id);
 }
@@ -75,7 +75,7 @@ int socket_bind(int s,const char ip[16],uint16 port,uint32 scope_id)
 int socket_bind_reuse(int s,const char ip[16],uint16 port,uint32 scope_id)
 {
   if (ipv4socket)
-    return socket_bind4_reuse(s,ip+12,port);
+    return socket_bind4_reuse(s,ip + 12,port);
 
   return socket_bind6_reuse(s,ip,port,scope_id);
 }
